QOLDEV-736 Fix search input alignment on Service finder.

--- a/src/assets/_project/_blocks/layout/header/_site-search.scss
+++ b/src/assets/_project/_blocks/layout/header/_site-search.scss
@@ -178,8 +178,6 @@
   }
 
   .input-group {
-    float: right;
-    position: relative;
     width: 525px;
 
     input[type=text] {
